crates/ts-doc/tests/snapshots/transform__parity__class_id_name_extends_and_members.snap
---
source: tests/transform.rs
expression: "transform(\"index\",\n\"export class Foo extends Bar<T> {\\n  x: number;\\n  static y = 1;\\n  private z() {}\\n}\")"
---
{
  "dependencies": [],
  "types": [
    {
      "type": "identifier",
      "name": "Bar"
    },
    {
      "type": "identifier",
      "name": "T"
    },
    {
      "type": "application",
      "base": 0,
      "typeParameters": [
        1
      ]
    },
    {
      "type": "number",
      "value": null
    },
    {
      "type": "any"
    },
    {
      "type": "any"
    },
    {
      "type": "function",
      "id": null,
      "name": null,
      "parameters": [],
      "return": 5,
      "typeParameters": [],
      "description": null,
      "access": null,
      "examples": []
    },
    {
      "type": "interface",
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "extends": [
        2
      ],
      "properties": {
        "x": {
          "name": "x",
          "indexType": null,
          "value": 3,
          "optional": false,
          "isMethod": false,
          "static": false,
          "abstract": false,
          "description": null,
          "access": null,
          "selector": null,
          "default": null
        },
        "y": {
          "name": "y",
          "indexType": null,
          "value": 4,
          "optional": false,
          "isMethod": false,
          "static": true,
          "abstract": false,
          "description": null,
          "access": null,
          "selector": null,
          "default": null
        },
        "z": {
          "name": "z",
          "indexType": null,
          "value": 6,
          "optional": false,
          "isMethod": true,
          "static": false,
          "abstract": false,
          "description": null,
          "access": "private",
          "selector": null,
          "default": null
        }
      },
      "typeParameters": [],
      "description": null,
      "access": null
    }
  ],
  "exports": {
    "Foo": 7
  },
  "export_all": []
}
