crates/ts-doc/tests/snapshots/transform__parity__destructured_export.snap
---
source: tests/transform.rs
expression: "transform(\"index\", \"export const {a, b} = obj;\")"
---
{
  "dependencies": [],
  "types": [
    {
      "type": "any"
    },
    {
      "type": "any"
    }
  ],
  "exports": {
    "a": 0,
    "b": 1
  },
  "export_all": []
}
